--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.28.1
-pandas==2.1.3
-numpy==1.24.3
+pandas>=2.2.0
+numpy>=1.26.0,<2.0.0
 plotly==5.17.0
 seaborn==0.13.0
 matplotlib==3.8.2
@@ -12,4 +12,3 @@ streamlit-aggrid==0.3.4.post3
 pillow==10.1.0
 openpyxl==3.1.2
 xlsxwriter==3.1.9
-seaborn
