--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.28.1
-pandas>=2.2.0
-numpy>=1.26.0,<2.0.0
+pandas==2.0.3
+numpy==1.24.3
 plotly==5.17.0
 seaborn==0.13.0
 matplotlib==3.8.2
