--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.17.0
-seaborn==0.13.0
-matplotlib==3.8.2
-scipy==1.11.4
-scikit-learn==1.3.2
-altair==5.2.0
-streamlit-option-menu==0.3.6
-streamlit-aggrid==0.3.4.post3
-pillow==10.1.0
-openpyxl==3.1.2
-xlsxwriter==3.1.9
+streamlit
+pandas
+plotly
+numpy
+seaborn
+matplotlib
+scikit-learn
+streamlit-option-menu
+pillow
+openpyxl
